--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-page-transition": "^3.1.0",
     "react-scripts": "4.0.0",
+    "react-transition-group": "^4.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
